# src/models/User.ts
@@ -1,4 +1,5 @@
 import {Schema, model} from 'mongoose'
+import bcrypt from "bcrypt-nodejs";
 
 const UserSchema: Schema = new Schema({
 
@@ -10,6 +11,17 @@ const UserSchema: Schema = new Schema({
     password: {type:String,required:true}
 });
 
-
+UserSchema.methods.comparePassword = function (candidatePassword: string, callback: any) {
+    console.log(candidatePassword,this.password);
+    if (candidatePassword===this.password) {
+        callback(false,true);
+    } else {
+        callback(false,false);
+    }
+    // bcrypt.compare(candidatePassword, this.password, (err: Error, isMatch: boolean) => {
+    //     console.log(isMatch);
+    //     callback(err, isMatch);
+    // });
+};
 
 export default model('User', UserSchema);
